--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,60 @@
 html {
   box-sizing: border-box;
+  font-family: 'Merriweather', serif;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+img {
+  max-width: 40px;
+}
+
+h2 {
+  font-size: 2rem;
+  color: #fff;
+  padding: 0;
+  margin: 0;
+}
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #d05c2e;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+nav{
+  background-color: #d05c2e;
+  text-align: center;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  outline: 1px solid #a63f38;
+}
+
+nav li {
+  margin: 0 .4em;
+
+}
+
+.btn {
+  font-size: 1.125rem;
+  text-decoration: none;
+  color: #fff;
+
 }
